修改了ImageView3Activity，使其界面拥有了预览、上传和拍照的功能

--- a/app/src/main/res/layout/activity_camera2test2.xml
+++ b/app/src/main/res/layout/activity_camera2test2.xml
@@ -6,7 +6,21 @@
         android:id="@+id/textureView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
+    <Button
+        android:id="@+id/btnStop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="0.8dp"
+        android:text="stop preview"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"/>
+    <Button
+        android:id="@+id/btnStart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="0.8dp"
+        android:text="start preview"
+        android:layout_alignParentBottom="true" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
